Fix footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,6 @@ h1{
     text-align: right;
     padding-top: 25px;
 }
+.stopka{
+    padding-top: 75px;
+}
